Mon Mar 28 11:15:16 BST 2011  Joe Hansen  <joedalton2@yahoo.dk>

	* po/da.po: Update from Translation Project.

Mon Mar 28 11:12:38 BST 2011  David Prévot  <david@tilapin.org>

	* man/po4a/po/fr.po: Update from Translation Project.
	* man/THANKS: Update.

Mon Mar 28 11:09:19 BST 2011  David Prévot  <david@tilapin.org>

	* po/fr.po: Update from Translation Project.

Mon Mar 28 11:06:04 BST 2011  Colin Watson  <cjwatson@debian.org>

	* m4/man-gcc-warning.m4: Remove.
	* gnulib: Import warnings module.
	* configure.ac: Replace MAN_GCC_WARNING with gl_WARN_ADD.

Sun Mar 27 18:25:25 BST 2011  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.0-pre1.
	* po/man-db.pot, po/*.po: Update.
	* man/po4a/po/man-db-manpages.pot: Update.

Thu Mar 24 12:46:38 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* lib/security.c (do_system_drop_privs_child): Remove unused
	  variable.

Thu Mar 24 12:43:51 GMT 2011  Colin Watson  <cjwatson@debian.org>

	* src/man.c (lang): Make non-const.
	  (local_man_loop): Free lang after calling display.
	  (display_filesystem): Likewise.
	  (display_database): Likewise.
	  (do_global_apropos_section): Ensure lang is set while calling
	  display.
	* NEWS: Document this.

Thu Mar 24 01:22:00 GMT 2011  Colin Watson  <cjwatson@debian.org>

	Help novices find their way around.  See
	http://brainstorm.ubuntu.com/idea/25975.

	* src/man.c (main): Add "(press h for help or q to quit)" to the
	  default less prompt string.
	* man/man1/man.man1 (Controlling formatted output): Update
	  documentation.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.
	* NEWS: Document this.

Thu Mar 24 01:03:13 GMT 2011  Colin Watson  <cjwatson@debian.org>

	Rewrite all remaining subprocess handling in terms of libpipeline.

	* lib/security.c (do_system_drop_privs_child): New function.
	  (do_system_drop_privs): Rewrite using libpipeline.
	* src/catman.c (post_fork): New function.
	  (catman): Rewrite using libpipeline.