@@ -1,4 +1,4 @@
-# man-bdb.m4 serial 3
+# man-bdb.m4 serial 4
 dnl MAN_CHECK_BDB(WITH-DB, HEADERS, LIBS, [ACTION-IF-FOUND])
 dnl Helper to check Berkeley DB linkage when particular header files and
 dnl libraries are included. ACTION-IF-FOUND may contain $head and $lib.
@@ -28,19 +28,19 @@ then
         LIBS="$LIBS -l$lib"
         AC_CACHE_CHECK([for dbopen from <${head}> in -l${lib}], man_tr_bdb,
            [AC_TRY_LINK([#include <$head>], [dbopen("foo", 0, 0, 0, (void *) 0)],
-                        [AS_VAR_SET(man_tr_bdb, yes)],
-                        [AS_VAR_SET(man_tr_bdb, no)])
+                        [AS_VAR_SET([man_tr_bdb], [yes])],
+                        [AS_VAR_SET([man_tr_bdb], [no])])
            ])
-        AS_IF([test AS_VAR_GET(man_tr_bdb) = yes],
-              [$4
-               AC_DEFINE_UNQUOTED([BDB_H], [<$head>],
-                                  [Define if you have, and want to use, Berkeley database header files.])
-               AC_DEFINE_UNQUOTED([BTREE], [1],
-                                  [Define if you have, and want to use, the Berkeley database library.])
-               AC_SUBST([DBTYPE], [btree])
-               DBLIBS="-l$lib"
-               db=yes],
-              [db=no])
+        AS_VAR_IF([man_tr_bdb], [yes],
+                  [$4
+                   AC_DEFINE_UNQUOTED([BDB_H], [<$head>],
+                                      [Define if you have, and want to use, Berkeley database header files.])
+                   AC_DEFINE_UNQUOTED([BTREE], [1],
+                                      [Define if you have, and want to use, the Berkeley database library.])
+                   AC_SUBST([DBTYPE], [btree])
+                   DBLIBS="-l$lib"
+                   db=yes],
+                  [db=no])
         LIBS="$man_saved_LIBS"
         AS_VAR_POPDEF([man_tr_bdb])dnl
         test "$db" = "yes" && break
