@@ -1,3 +1,13 @@
+Mon Mar 28 12:26:54 BST 2011  Colin Watson  <cjwatson@debian.org>
+
+	* configure.ac: Apply correct M4 quotation throughout.
+	* m4/man-bdb.m4: Likewise.
+	* m4/man-gnu-nroff.m4: Likewise.
+	* m4/man-linguas.m4: Likewise.
+	* m4/man-trans-subst.m4: Likewise.
+
+	* m4/man-bdb.m4: Use AS_VAR_IF rather than AS_IF plus AS_VAR_GET.
+
 Mon Mar 28 11:15:16 BST 2011  Joe Hansen  <joedalton2@yahoo.dk>
 
 	* po/da.po: Update from Translation Project.
